<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_ros2_simulations</name>
  <version>0.0.0</version>
  <description>Package description of webots_ros2_simulations</description>
  <maintainer email="devis.dalmoro@unitn.it">devis</maintainer>
  <license>License declaration of webots_ros2_simulations</license>

  <depend>rclpy</depend>
  <depend>webots_ros2_simulations_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>webots_ros2_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
